<resources>
    <string name="app_name">StartLancer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="dialog_loading">Creating your account...</string>
    <string name="dialog_message">Creating account with firebase...</string>
    <string name="error_cannot_be_empty">Username cannot be empty</string>
    <string name="error_email_cannot_be_empty">Email cannot be empty</string>
    <string name="error_password_cannot_be_empty">Password cannot be empty</string>
    <string name="error_email_not_valid">Email not valid</string>
    <string name="error_password_not_valid">Password not valid</string>
    <string name="log_message_create_success">Account created successfully</string>
    <string name="error_email_taken">Email already taken</string>
    <string name="log_message_login_successful">Successfully logged in</string>
    <string name="title_activity_welcome">StartLancer</string>
    <string name="error_message_email_issue">User does not exist</string>
    <string name="error_message_failed_sign_in_no_network">No network dectected</string>
    <string name="login_dialog_loading" />
    <string name="login_dialog_message">Signing in...</string>
    <string name="oauth2_format">oauth2:%s</string>
    <string name="google_error_recoverable_oauth_error">"Recoverable Google OAuth error: "</string>
    <string name="google_error_google_play_services_not_available">Google Play Services are not available.</string>
    <string name="google_error_trying_to_connect_google_api">Trying to connect to Google API</string>
    <string name="google_error_auth_with_google">"Error authenticating with Google: "</string>
    <string name="google_error_network_error">"Network error: "</string>
    <string name="google_error_cant_connect_to_api">Are you sure that you set up a project for your app?
        Check out : https://console.developers.google.com/project. Also make sure you have all the proper
    gradle dependencies</string>
    <string name="log_error_occurred">Error</string>
    <string name="title_activity_create_startup_account">CreateStartupAccountActivity</string>
    <string name="title_activity_login_startup">LoginStartupActivity</string>
    <string name="title_activity_welcome_startup">WelcomeStartupActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_startup_detail">StartupDetailActivity</string>
    <string name="title_activity_freelancer_detail">FreelancerDetailActivity</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="title_activity_startup_profile">StartupProfileActivity</string>
    <string name="log_error_the_read_failed">User data read failed</string>
    <string name="hint_add_opening">Enter the opening title</string>
    <string name="hint_add_salary">Enter the salary</string>
    <string name="positive_button_create">Add</string>
    <string name="title_activity_opening_detail">OpeningDetailActivity</string>
    <string name="title_activity_freelancer_profile">Profile</string>
    <string name="title_activity_freelancer_profile_skills">Skills</string>
    <string name="title_activity_freelancer_profile_experiences">Experiences</string>
    <string name="title_activity_freelancer_profile_projects">Projects</string>
    <string name="title_activity_freelancer_profile_about">About</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Type something to search</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="log_error_invalid_provider">Invalid authentication provider</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_password">Enter your password</string>
    <string name="hint_enter_username">Enter your username</string>
    <string name="text_already_have_account">Already have account?</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_signin_with_password">Sign In</string>
    <string name="text_dont_have_account">Don\'t have account?</string>
    <string name="button_create_account">Create Account</string>
    <string name="hint_add_skill">Add skill type</string>
    <string name="hint_add_years_of_exp">Add years of experience</string>
    <string name="hint_add_experience">Add Experience</string>
    <string name="hint_add_experience_description">Add description</string>
    <string name="hint_add_place">Add place</string>
    <string name="hint_add_project">Add project title</string>
    <string name="hint_add_project_description">Add description</string>
    <string name="hint_add_project_link">Add project link</string>
    <string name="hint_enter_startup_name">Enter startup name</string>
    <string name="hint_enter_startup_email">Enter startup email</string>
    <string name="hint_enter_startup_password">Enter startup password</string>
    <string name="title_activity_startupr_profile_opening">Openings</string>
    <string name="title_activity_startup_profile_team">Team</string>
    <string name="title_activity_startup_profile_work">Work</string>
    <string name="title_activity_startup_profile_about">About</string>
    <string name="title_activity_startup_profile_opening_detail">Opening Detail</string>
    <string name="title_activity_startup_opening_detail">Opening Detail</string>
    <string name="title_activity_startup_applications">Applications</string>
    <string name="title_activity_startup_application_candidates">Candidates</string>
    <string name="title_activity_startup_candidate_detail">Details</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_saved_candidates">Saved Candidates</string>
    <string name="title_activity_saved_candidate_detail">Details</string>
    <string name="title_activity_cofounder_search">Search Cofounder</string>
    <string name="hint_add_location">Add your location</string>
    <string name="hint_add_cofounder_reqs">What are you looking for in a cofounder?</string>
    <string name="hint_add_cofounder_reason">Why you\'ll be an excellent cofounder?</string>
    <string name="title_activity_cofounder_detail">Details</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="hint_add_project_title">Add project title</string>
    <string name="hint_add_open_project_description">Add project description</string>
    <string name="hint_add_project_links">Add project links</string>
    <string name="hint_ad_project_technologies">What are the technologies used?</string>
</resources>