<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.freelancer.fragments.dialogs.AddFreelancerProjectsFragment">

    <EditText
        android:id="@+id/edit_text_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_add_project"
        android:imeOptions="actionDone|flagNoExtractUi"
        android:inputType="textCapWords"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey" />

    <EditText
        android:id="@+id/edit_text_project_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_add_project_description"
        android:imeOptions="actionDone|flagNoExtractUi"
        android:inputType="textCapWords"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:layout_below="@+id/edit_text_project"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/edit_text_project_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_add_project_link"
        android:imeOptions="actionDone|flagNoExtractUi"
        android:inputType="textCapWords"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:layout_below="@+id/edit_text_project_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>