<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.startup.CreateStartupAccountActivity"
    android:background="@color/dark_green">

    <LinearLayout
        android:id="@+id/linear_layout_create_account_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            app:hintTextAppearance="@style/HintText">

            <EditText
                android:id="@+id/startupSignupUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_startup_name"
                android:inputType="textCapWords"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/login_buttons_text_size"
                android:elevation="2dp"
                android:background="@drawable/myrect" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/HintText"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin">

            <EditText
                android:id="@+id/startupSignupEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_startup_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/login_buttons_text_size"
                android:elevation="2dp"
                android:background="@drawable/myrect" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/HintText"
            android:layout_marginBottom="@dimen/margin_normal">

            <EditText
                android:id="@+id/startupSignupPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_startup_password"
                android:inputType="textPassword"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/login_buttons_text_size"
                android:elevation="2dp"
                android:background="@drawable/myrect" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_create_account_final"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:background="@color/colorPrimary"
            android:onClick="createStartupr"
            android:text="@string/title_activity_create_account"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_buttons_text_size"
            android:elevation="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_already_have_account"
                style="@style/LoginCreateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_already_have_account"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_sign_in"
                style="@style/LoginCreateTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goToLoginStartup"
                android:text="@string/button_sign_in"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>